--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                     </div>
                     <div class="step" style="display:none;">
                         <p>Thanks . Now you can see a list and pictures of women in your area . Again , please keep her identity secret .Click on the " CONTINUE" and create a free account</p>
-                        <a href="https://m.dardaktrack.com/tracking202/redirect/rtr.php?t202id=6161&c1=DR_TOM&t202kw=DR_TOM" onclick="ngid()" class="btn btn-end">
+                        <a href="https://m.dardaktrack.com/tracking202/redirect/rtr.php?t202id=5231&c1=DR_qorun&t202kw=DR_qorun" onclick="ngid()" class="btn btn-end">
                             <span>CONTINUE</span>
                         </a>
                     </div>
@@ -441,7 +441,7 @@
                             var ExpDate = new Date();
                             ExpDate.setTime(ExpDate.getTime() + (0 * 0 * 0 * 0));
                             SetCookie('clickunder', '1', ExpDate, "/");
-                            window.open("https://m.dardaktrack.com/tracking202/redirect/rtr.php?t202id=6161&c1=DR_TOM&t202kw=DR_TOM");
+                            window.open("https://m.dardaktrack.com/tracking202/redirect/rtr.php?t202id=5231&c1=DR_qorun&t202kw=DR_qorun");
                             window.focus();
                         }
                     }
